--- a/CSS/plottingblocks/style.css
+++ b/CSS/plottingblocks/style.css
@@ -2,57 +2,44 @@
 *{
   margin: 0px;
   padding: 0px;
-}
-
-#wrapper{
+ }
+ #wrapper{
   width: 950px;
   background-color: silver;
   margin: 0px auto;
-  min-height: 80%;
-  padding-top: 2%;
-  padding-bottom: 1%;
-}
-
-#header{
+  padding: 15px;
+ }
+ #header{
   min-height: 150px;
   background-color: green;
-  width: 930px;
-  margin: 0px auto;
-}
-
-.body{
-  margin: 2% auto;
-  padding: 0 1%;
-}
-
-#navigation{
+  margin-bottom: 15px;
+ }
+ #navigation{
+  min-height: 300px;
+  width: 200px;
+  background-color: blue;
   display: inline-block;
   vertical-align: top;
-  min-height: 300px;
-  width: 215px;
-  background-color: blue;
-  margin-right: 10px;
-}
-
-#main_content{
-  display: inline-block;
+ }
+ #main_content{
   min-height: 400px;
   width: 700px;
-  margin: auto;
   background-color: red;
-}
-.subcontents{
   display: inline-block;
+  margin-left: 15px;
+  padding: 15px;
+ }
+ .subcontents{
   min-height: 200px;
   width: 210px;
   background-color: yellow;
-  margin: 10px 3px 2px 10px;
-}
-
-#advertisement{
+  display: inline-block;
+  margin-right: 15px;
+ }
+ #advertisement{
   min-height: 120px;
   width: 660px;
   background-color: purple;
-  margin: 10px;
-}
+  margin-top: 15px;
+ }
  
