--- a/CSS/Portfolio/style.css
+++ b/CSS/Portfolio/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+div {
+  border: 1px solid red;
+}
+
 h2, p, a {
   padding: 8px;
   line-height: 1.05em
@@ -19,15 +23,28 @@ button {
   margin: 12px 0 0 100px;
 }
 
+h1 {
+  margin: 0;
+}
+
 .title {
   background-color: #f5f5f5;
-  width: 985px;
-  height: 65px;  
+  width: 80%;
+  height: 65px;
+  margin: 0 auto;
+}
+
+.lg-3 {
+  width: 48%;
 }
 
 .name {
   display: inline-block;
-  margin-left: 20px;
+}
+
+.name h1 {
+  padding-left: 20px;
+  padding-top: 10px;
 }
 
 .slogan span {
@@ -36,33 +53,35 @@ button {
 
 .slogan {
   display: inline-block;
+  vertical-align: top;
   position: relative;
-  left: 540px;;
+  text-align: right;
+  margin-top: 26px;
 }
 
 .container {
-  height: 1005px;
-  width: 955px;
+  width: 78%;
   background-color: #311f25;
   padding: 15px;
-  
+  margin: 0 auto;
 }
 
 .main-image {
-  height: 300px;
-  width: 460px;
   border: 5px solid #8c8a97;
-  background-image: url('photo_of_me.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
   display: inline-block;
   margin-right: 5px;
+  overflow: hidden;
+}
+
+.main-image img {
+  width: 100%;
+  max-height: 300px;
 }
 
 .head {
   background-color: #8c8a97;
   height: 40px;
-  width: 460px;
+  width: 100%;
   display: inline-block;
   position: static;
   color: #fff;
@@ -72,7 +91,6 @@ button {
 
 .about {
   height: 310px;
-  width: 460px;
   background-color: #dacbd9;
   display: inline-block;
   vertical-align: top;
