--- a/CSS/Portfolio/style.css
+++ b/CSS/Portfolio/style.css
@@ -27,6 +27,11 @@ h1 {
   margin: 0;
 }
 
+.row {
+  width: 100%
+  margin: 0 auto;
+}
+
 .title {
   background-color: #f5f5f5;
   width: 80%;
@@ -36,6 +41,10 @@ h1 {
 
 .lg-3 {
   width: 48%;
+}
+
+.lg-2 {
+  width: 30%;
 }
 
 .name {
@@ -99,16 +108,17 @@ h1 {
 
 .project {
   height: 675px;
-  width: 300px;
+  /* width: 300px; */
   background-color: #dacbd9;
   display: inline-block;
-  margin-right: 15px;
+  /* margin-right: 15px; */
   margin-top: 10px;
   overflow: hidden;
 }
 
 .project img {
-  width: 300px;
+  /* width: 300px; */
+  width: 100%;
   height: 175px;
   position: relative;
 }
