--- a/CSS/Portfolio/style.css
+++ b/CSS/Portfolio/style.css
@@ -2,10 +2,6 @@ body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-div {
-  border: 1px solid red;
-}
-
 h2, p, a {
   padding: 8px;
   line-height: 1.05em
@@ -23,37 +19,15 @@ button {
   margin: 12px 0 0 100px;
 }
 
-h1 {
-  margin: 0;
-}
-
-.row {
-  width: 100%
-  margin: 0 auto;
-}
-
 .title {
   background-color: #f5f5f5;
-  width: 80%;
-  height: 65px;
-  margin: 0 auto;
-}
-
-.lg-3 {
-  width: 48%;
-}
-
-.lg-2 {
-  width: 30%;
+  width: 985px;
+  height: 65px;  
 }
 
 .name {
   display: inline-block;
-}
-
-.name h1 {
-  padding-left: 20px;
-  padding-top: 10px;
+  margin-left: 20px;
 }
 
 .slogan span {
@@ -62,35 +36,33 @@ h1 {
 
 .slogan {
   display: inline-block;
-  vertical-align: top;
   position: relative;
-  text-align: right;
-  margin-top: 26px;
+  left: 540px;;
 }
 
 .container {
-  width: 78%;
+  height: 1005px;
+  width: 955px;
   background-color: #311f25;
   padding: 15px;
-  margin: 0 auto;
+  
 }
 
 .main-image {
+  height: 300px;
+  width: 460px;
   border: 5px solid #8c8a97;
+  background-image: url('photo_of_me.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   display: inline-block;
   margin-right: 5px;
-  overflow: hidden;
-}
-
-.main-image img {
-  width: 100%;
-  max-height: 300px;
 }
 
 .head {
   background-color: #8c8a97;
   height: 40px;
-  width: 100%;
+  width: 460px;
   display: inline-block;
   position: static;
   color: #fff;
@@ -100,6 +72,7 @@ h1 {
 
 .about {
   height: 310px;
+  width: 460px;
   background-color: #dacbd9;
   display: inline-block;
   vertical-align: top;
@@ -108,17 +81,16 @@ h1 {
 
 .project {
   height: 675px;
-  /* width: 300px; */
+  width: 300px;
   background-color: #dacbd9;
   display: inline-block;
-  /* margin-right: 15px; */
+  margin-right: 15px;
   margin-top: 10px;
   overflow: hidden;
 }
 
 .project img {
-  /* width: 300px; */
-  width: 100%;
+  width: 300px;
   height: 175px;
   position: relative;
 }
