--- a/CSS/Portfolio/style2.css
+++ b/CSS/Portfolio/style2.css
@@ -5,9 +5,10 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
+    /* background-color: #211318; */
 }
 div, .header * {
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 .container {
     max-width: 930px;
@@ -17,10 +18,13 @@ div, .header * {
     background-color: whitesmoke;
     width: 100%;
 }
-.header h1, .header h2 {
-    width: 45%;
+.block {
     display: inline-block;
     vertical-align: top;
+}
+.header h1, .header h2 {
+    width: 45%;
+    
 }
 .header h1 {
     padding: 18px 0 20px 20px;
@@ -40,8 +44,6 @@ div, .header * {
     text-align: center;
 }
 .image, .about {
-    display: inline-block;
-    vertical-align: top;
     width: 47%;
     margin: 5px;
 }
@@ -59,11 +61,44 @@ div, .header * {
     text-align: left;
     text-shadow: 1px 1px 8px black;
 }
-.about {
+.white-pink {
     background: linear-gradient(to right, #fffeff, #d8c8d8);
     padding-bottom: 4px;
 }
 .text * {
     text-align: left;
+    margin: 10px;
+}
+.port-item {
+    margin: 0 4px;
+}
+.port-card {
+    text-align: left;
+}
+.port-card p {
     margin: 15px;
+}
+.port-card img {
+    width: 100%;
+}
+.lg-2 {
+    width: 31%;
+}
+.tech-icons {
+    padding-top: 15px;
+}
+.tech-icons img {
+    max-width: 45px;
+}
+.tech-icons a {
+    display: inline-block;
+    margin: 10px 0;
+    padding: 10px;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: forestgreen;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    width: 60%;
 }
