--- a/JQuery/WeatherApp/style.css
+++ b/JQuery/WeatherApp/style.css
@@ -4,10 +4,19 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 .container {
-  width: 95%;
-  border: 1px solid black;
+  width: 45%;
+  box-shadow: 2px 2px 10px black;
   margin: 0 auto;
 }
 .form-box {
+  padding: 1rem;
+}
+.search,
+input {
+  height: 2rem;
+  border-radius: 6px;
+  padding: 0 5px;
+}
+.info-display {
   padding: 1rem;
 }
